a minor css bursh-up

--- a/assets/styles/styles.styl
+++ b/assets/styles/styles.styl
@@ -21,10 +21,8 @@ body
 
 a
 	color: main
-	&:link, &:visited, &:focus
+	&:link, &:visited, &:focus, &:hover
 		color: main
-	&:hover
-		color: main-hover
 	&.none
 		text-decoration: none
 
