--- a/assets/styles/styles.styl
+++ b/assets/styles/styles.styl
@@ -42,6 +42,12 @@ a
 	font-family: fantasy
 	font-size: 0.8em
 
+.heart
+	font-family: fantasy
+	font-size: 1.2em
+	line-height: 0.8em
+	vertical-align: middle
+
 section
 	padding: 30px 20px
 	&:nth-child(odd)
@@ -144,7 +150,6 @@ li
 	padding: 0 10px
 	@media screen and (min-width: 768px)
 		height: 370px
-
 
 .back-to-top
 	margin-top: 20px
