--- a/assets/styles/styles.styl
+++ b/assets/styles/styles.styl
@@ -22,7 +22,12 @@ body
 	line-height: 1.4rem
 	margin: 0
 	padding: 0.5rem 1rem 0
-	@media screen and (min-width: 900px)
+	@media screen and (min-width: 768px)
+
+		padding: 0.5rem 2rem 0
+
+	@media screen and (min-width: 1025px)
+
 		padding: 0.5rem 4rem 0
 
 a
@@ -36,7 +41,11 @@ a
 
 		background: linear-gradient(transparent 40%, link-underline-hover 0)
 
-h1, h2
+h1, h4
+
+	margin: 0
+
+h2
 
 	margin: 0 0 1rem
 	line-height: 2rem
@@ -44,10 +53,6 @@ h1, h2
 h3
 
 	margin-bottom: 0
-
-h4
-
-	margin: 0
 
 li
 
@@ -79,21 +84,25 @@ ul
 
 	font-size: 0.8rem
 
-.smiley
-
-	font-family: fantasy
-	font-size: 0.8em
-
 .heart
 
 	font-family: fantasy
-	font-size: 1.2em
-	line-height: 0.8em
+	font-size: 1.2rem
+	line-height: 0.8rem
 	vertical-align: middle
 
 .home
 
-	font-size: 1.33rem
+	font-size: 1.3rem
+	line-height: 1.5rem
+
+	@media screen and (orientation: portrait) and (min-width: 375px), screen and (orientation: landscape) and (min-width: 902px)
+
+		font-size: 1.8rem
+		line-height: 2rem
+		h1
+
+			line-height: 2.8rem
 
 .dates
 
@@ -105,7 +114,8 @@ ul
 
 	ul
 		padding-bottom: 1.4rem
-	@media screen and (min-width: 920px)
+	@media screen and (min-width: 650px)
+
 		float: left
 		width: 50%
 
