i like the centered look better

--- a/assets/styles/styles.styl
+++ b/assets/styles/styles.styl
@@ -78,7 +78,7 @@ ul
 
 	display: flex
 	flex-direction: column
-	justify-content: space-between
+	justify-content: center
 	min-height: 100%
 	padding-bottom: 1rem
 
